    - Fix crash on invalid OpenSesame script
    - Improved validation and quote handling in conditional statements (#356)
    - Fix typo in bug_report success notification
    - Fix incorrect URL in Windows installer
    - Fix canvas.copy() (#355)
    - Fix variable inspection (don't crash on empty values)
    - Fix a crash when renaming a variable to itself
  * Improvements
    - Improved validation of variable names in loop item
    - Improved validation of OpenSesame-script syntax

 -- Sebastiaan Mathot <sebastiaan@mantis>  Mon, 26 Oct 2015 14:31:00 +0100

opensesame (3.0.1-ubuntu1) vivid; urgency=medium

  * Bugs fixed
    - Fix crash on fallback_console reset
    - Catch syntax warnings in inline_script items
    - Fix deleting items from pool
  * Improvements
    - Give more informative error messages when using invalid variable names
    - Update auto_example plugin
    - Ignore 'undefined name' warnings when validating Python code (requires QProgEdit >= 3.1.0)
    - Update srbox plugin and add require_state_change_option
    - Add explanation how to suppress bug_report messages

 -- Sebastiaan Mathot <sebastiaan@mantis>  Tue, 20 Oct 2015 10:58:57 +0200

opensesame (3.0.0-ubuntu1) vivid; urgency=medium

  * New major release

 -- Sebastiaan Mathot <sebastiaan@mantis>  Sun, 27 Sep 2015 16:18:16 +0200

opensesame (2.9.7-ubuntu1) vivid; urgency=medium

  * Improvements
    - Add append menu to overview and sequence
    - Add permanently delete menu option to unused items
  * Bugs fixed
    - Use px (not pt) as units in font GUI
    - Explicitly set window type in psycho backend (#331)
    - Fix recursion errors in drag-and-drop
    - Restore structure when a drag is canceled (#337)
    - Fix inconsistent folding/unfolding behavior in overview area (#336)
    - Fix missing debug output on Android (#346)
    - Allow uppercase text input on Android (#341)
    - Allow external links in notification dialog (#340)